Provided document alternatives for lippelo.me index.html.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8">
+<html
+  about="https://lippelo.me/#erwin.geeraerts"
+  typeof="schema:Person foaf:Person"
+  prefix="con: http://www.w3.org/2000/10/swap/pim/contact#
+	  foaf: http://xmlns.com/foaf/0.1/
+	  pim: http://www.w3.org/ns/pim/space#>
+	  rdf: http://www.w3.org/1999/02/22-rdf-syntax-ns#
+	  rdfs: http://www.w3.org/2000/01/rdf-schema#
+	  schema: http://schema.org/
+	  xsd: http://www.w3.org/2001/XMLSchema#">
+  
+  <head>
+    
+    <!-- Document Information  -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="all">
+
+    <!-- Document Alternates -->
+    <link rel="alternate" type="text/turtle" href="index.ttl">    
+    <link rel="alternate" type="application/ld+json" href="index.jsonld">
+    
 		<title>Title</title>
 	<style type="text/css">
 	/* CSS styles here... */
@@ -51,6 +70,14 @@
 		  {
 		      "foaf:name": "Guy Cools"
 		  }
+
+		  Voor de urls:
+
+https://lynnvkerckhove.github.io/graphPub/#me of https://lynnvkerckhove.github.io/graphPub/docs/LynnVK.ttl (zou dat eigenlijk ook niet mogen?)
+
+en van Guy: https://gc-cc.github.io/#me (die staat in de discussions wel blijkbaar 😃 )
+
+ 
 	      ]
 	  }
 	</script>
