Added style & facicon to index.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html
   about="https://lippelo.me/#erwin.geeraerts"
   typeof="schema:Person foaf:Person"
-  prefix="con: http://www.w3.org/2000/10/swap/pim/contact#
+  prefix="
+	  con: http://www.w3.org/2000/10/swap/pim/contact#
+	  dbo: http://dbpedia.org/ontology/
+	  dbp: http://dbpedia.org/resource/
 	  foaf: http://xmlns.com/foaf/0.1/
+	  owl: http://www.w3.org/2002/07/owl#
 	  pim: http://www.w3.org/ns/pim/space#>
 	  rdf: http://www.w3.org/1999/02/22-rdf-syntax-ns#
 	  rdfs: http://www.w3.org/2000/01/rdf-schema#
 	  schema: http://schema.org/
-	  xsd: http://www.w3.org/2001/XMLSchema#">
+	  solid: http://www.w3.org/ns/solid/terms#
+	  xsd: http://www.w3.org/2001/XMLSchema#
+  ">
   
   <head>
     
@@ -20,6 +26,13 @@
     <!-- Document Alternates -->
     <link rel="alternate" type="text/turtle" href="index.ttl">    
     <link rel="alternate" type="application/ld+json" href="index.jsonld">
+
+    <!-- Style -->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.ico">
+
     
 		<title>Title</title>
 	<style type="text/css">
