Tried to get turtle content in sync with landingpage.

--- a/index.html
+++ b/index.html
@@ -27,17 +27,30 @@
     <link rel="alternate" type="text/turtle" href="index.ttl">    
     <link rel="alternate" type="application/ld+json" href="index.jsonld">
 
+    <!-- Page Information  -->
+    <title>Erwin Geeraerts</title>
+    <meta about="https://lippelo.me" property="schema:creator foaf:maker schema:mainEntity foaf:primaryTopic"
+	  resource="https://lippelo.me/#erwin.geeraerts">
+    <meta about="https://lippelo.me/#erwin.geeraerts" typeof="schema:WebSite foaf:PersonalProfileDocument">
+
     <!-- Style -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-    
-		<title>Title</title>
-	<style type="text/css">
-	/* CSS styles here... */
-	</style>
+    <!-- Personal Information -->
+    <meta property="con:preferredURI" resource="https://lippelo.me/#erwin.geeraerts">
+    <meta property="schema:url foaf:homepage" resource="https://www.linkedin.com/in/geeraertserwin/">
+    <meta property="foaf:based_near dbo:location" resource="https://dbpedia.org/page/Lippelo">    
+    <meta property="foaf:based_near dbo:location" resource="https://dbpedia.org/page/Brussels">
+    <meta property="foaf:workplaceHomepage" resource="https://www.patronale-life.be/">
+    <meta property="schema:knowsLanguage" content="nl">
+    <meta property="schema:knowsLanguage" content="nl-BE">
+    <meta property="schema:knowsLanguage" content="en">
+    <meta property="schema:knowsLanguage" content="fr">
+
+  
 	<script type="application/ld+json" id="erwin.geeraerts">
 	  {
 	      "@context": {
