Synced landing page content with turtle & json-ld content.

--- a/index.html
+++ b/index.html
@@ -103,15 +103,10 @@
       <li>Voornaam:Erwin
       <li>Achternaam:Geeraerts
     </ul>
-    <h2>Mijn home pagina's:</h2>
+    <h2>Mijn persoonijke pagina's:</h2>
     <ul>
       <li>Deze pagina.
       <li><a href="https://www.linkedin.com/in/geeraertserwin/">LinkedIn</a>
-    </ul>
-    <h2>Welkom op mijn persoonlijke pagina.</h2>
-    <ul>
-      <li>Deze pagina.
-      <li>LinkedIn:
     </ul>
     <h2>Vertrouwde plekken:</h2>
     <ul>
