Synced landing page content with turtle & json-ldd content.

--- a/index.html
+++ b/index.html
@@ -122,6 +122,19 @@
       <li>Ooit Latijn... (toen ik nog op de schoolbanken zat)
       <li>Italiaans (wil ik zeker ooit eens goed leren spreken).
     </ul>
+    <h2>Mijn hobby's:</h2>
+    <ul>
+      <li>Serre, tuin & mini-tractor,
+      <li>mijn kinderen plagen,
+      <li>trails lopen.
+    </ul>
+    <h2>Mijn ambities:</h2>
+    <ul>
+      <li>Een goede & leuke huisvader zijn voor mijn gezin,
+      <li>een betrouwbare expert in je bedrijf,
+      <li>een aangenaam persoon om mee rond te hangen.
+    </ul>
+    
   </body>
   
 </html>
