--- a/index.html
+++ b/index.html
@@ -122,17 +122,18 @@
       <li>Ooit Latijn... (toen ik nog op de schoolbanken zat)
       <li>Italiaans (wil ik zeker ooit eens goed leren spreken).
     </ul>
-    <h2>Mijn hobby's:</h2>
+    <h2>Hobby's:</h2>
     <ul>
       <li>Serre, tuin & mini-tractor,
       <li>mijn kinderen plagen,
       <li>trails lopen.
     </ul>
-    <h2>Mijn ambities:</h2>
+    <h2>Ambities:</h2>
     <ul>
       <li>Een goede & leuke huisvader zijn voor mijn gezin,
       <li>een betrouwbare expert in je bedrijf,
-      <li>een aangenaam persoon om mee rond te hangen.
+      <li>een aangenaam persoon om mee rond te hangen, 
+      <li>iemand die je liever in je eigen team dan in dat van je tegenstander hebt.
     </ul>
     
   </body>
