Synced landing page content with turtle & json-ld content.

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <li>Een goede & leuke huisvader zijn voor mijn gezin,
       <li>een betrouwbare expert in je bedrijf,
       <li>een aangenaam persoon om mee rond te hangen, 
-      <li>iemand die je liever in je eigen team dan in dat van je tegenstander hebt.
+      <li>iemand die je liever in je eigen team hebt dan in dat van je tegenstander.
     </ul>
     
   </body>
