Synced landing page content with turtle & json-ldd content.

--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
       <li>Thuis:Lippelo
       <li>Werk:Brussel
     </ul>
+    <h2>Opleidingen:</h2>
+    <ul>
+      <li><a href="https://xaco.be/">Latijn Wiskunde aan Xaverius college te Borgerhout.</a>
+      <li><a href="https://www.biw.kuleuven.be/">Ik ben bio-ingenieur van opleiding, major interfasechemie.</a>
+      <li><a href="https://ufora.ugent.be/d2l/home/1045903">Momenteel volg ik een opleiding aan UGent over kennisgrafen.</a>
+    </ul>    
     <h2>Talenkennis:</h2>
     <ul>
       <li>Nederlands (moedertaal),
