Added some more content to landingspage.

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
       <li>Serre, tuin & mini-tractor,
       <li>mijn kinderen plagen,
       <li>trails lopen.
+      <li>Schoolgaande kinderen helpen met hun huiswerk via <a href="https://auxilia-vlaanderen.be/">Auxilia VZW</a>.
     </ul>
     <h2>Ambities:</h2>
     <ul>
