Reworked the hashtag part.

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </ul>
     <h2>Ambities:</h2>
     <ul>
-      <li>Een goede & leuke huisvader zijn voor mijn gezin,
+      <li>Een goede huisvader zijn voor mijn gezin,
       <li>een betrouwbare expert in je bedrijf,
       <li>een aangenaam persoon om mee rond te hangen, 
       <li>iemand die je liever in je eigen team hebt dan in dat van je tegenstander.
