Reorganised index files.

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     <meta property="schema:name" content="Knowledge Graphs Course">
     <link rel="schema:url" href="https://pietercolpaert.be/teaching/kg/#2024-2025">    
 
-    <script type="text/turtle" id="Me">
-@base <https://lippelo.me/#> .
+    <script type="text/turtle" id="me">
+@base <https://lippelo.me#> .
 @prefix foaf: <http://xmlns.com/foaf/0.1/> .
 @prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
 @prefix con: <http://www.w3.org/2000/10/swap/pim/contact#> .
