--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
   <nav>
     <ul>
       <li><a href="index.html">Thuis</a></li>
-      <li><a href="about.html">Wie zijn wij</a></li>
-      <li><a href="events.html">Evenementen</a></li>
-      <li><a href="contact.html">Contacteer ons</a></li>
-      <li><a href="gallery.html">Fotoboek</a></li>
+      <li><a href="over_ons.html">Wie zijn wij</a></li>
+      <li><a href="evenementen.html">Evenementen</a></li>
+      <li><a href="contacteer_ons.html">Contacteer ons</a></li>
+      <li><a href="fotoboek.html">Fotoboek</a></li>
     </ul>
 </nav>
   <div id="body_image">
