--- a/evenementen.html
+++ b/evenementen.html
@@ -31,6 +31,7 @@
   <!--   <\!-- SiteSearch Rollyo -\-> -->
   <!-- </header> -->
   <nav>
+  <nav>
     <ul>
       <li><a href="index.html">Thuis</a></li>
       <li><a href="about.html">Wie zijn wij</a></li>
