--- a/evenementen.html
+++ b/evenementen.html
@@ -31,15 +31,14 @@
   <!--   <\!-- SiteSearch Rollyo -\-> -->
   <!-- </header> -->
   <nav>
-  <nav>
     <ul>
       <li><a href="index.html">Thuis</a></li>
-      <li><a href="about.html">Wie zijn wij</a></li>
-      <li><a href="events.html">Evenementen</a></li>
-      <li><a href="contact.html">Contacteer ons</a></li>
-      <li><a href="gallery.html">Fotoboek</a></li>
+      <li><a href="over_ons.html">Wie zijn wij</a></li>
+      <li><a href="evenementen.html">Evenementen</a></li>
+      <li><a href="contacteer_ons.html">Contacteer ons</a></li>
+      <li><a href="fotoboek.html">Fotoboek</a></li>
     </ul>
-</nav>
+  </nav>
   <div id="body_text">
     <h2>Evenementen</h2>
       <p>Bubble Under members love meeting up for dive trips around the country.
