--- a/index.html
+++ b/index.html
@@ -1,80 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>LippeLof, belevenissen in de kerk zijn tof!</title>
-  <meta charset="utf-8" />
-  <!--[if lt IE 9]>
-   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-  <link href="style1.css" rel="stylesheet" type="text/css" />
-  <link href='http://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
-</head>
-<body>
-  <!-- <header> -->
-  <!--   <div id="sitebranding"> -->
-  <!--     <h1>LippeLof.be</h1> -->
-  <!--   </div> -->
-  <!--   <div id="tagline"> -->
-  <!--     <p>LippeLof is eens iets anders dan spelen in den hof!</p> -->
-  <!--   </div> -->
-  <!--   <\!-- SiteSearch Rollyo -\-> -->
-  <!--   <form id="searchform" name="searchform" action="http://www.rollyo.com/search.html" method="get"> -->
-  <!--     <div id="search"> -->
-  <!--       <input type="text" name="q" value="" id="search-box" /> in -->
-  <!--       <select id="searchmenu" name="sid"> -->
-  <!--         <option value="6170">Bubble Under</option> -->
-  <!--         <option value="web">The web</option> -->
-  <!--       </select> -->
-  <!--       <input type="submit" value="Search" /> -->
-  <!--     </div> -->
-  <!--   </form> -->
-  <!--   <\!-- SiteSearch Rollyo -\-> -->
-  <!-- </header> -->
-  <nav>
-    <ul>
-      <li><a href="index.html">Thuis</a></li>
-      <li><a href="over_ons.html">Wie zijn wij</a></li>
-      <li><a href="evenementen.html">Evenementen</a></li>
-      <li><a href="contacteer_ons.html">Contacteer ons</a></li>
-      <li><a href="fotoboek.html">Fotoboek</a></li>
-    </ul>
-</nav>
-  <div id="body_image">
-    <img src="backgrounds/LippeLof_POS_Q.jpg" width="600" height="200" alt="Logo LippeLof." id="logoImage" />
-  </diV>
-  <div id="body_text">
-    <h2>Welkom in 't LippeLof</h2>
-    <!-- <div class="aside"> -->
-      <!-- <iframe src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FBubble-Under%2F156732361048951%3Fsk%3Dwall&amp;width=200&amp;colorscheme=light&amp;show_faces=true&amp;stream=true&amp;header=true&amp;height=250" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:200px; height:250px;" allowTransparency="true"></iframe> -->
-      <!-- 	<a id="twitImageLink" href="http://www.twitter.com/bubbleunderclub"><img src="http://twitter-badges.s3.amazonaws.com/follow_me-a.png" alt="Follow bubbleunderclub on Twitter"/></a> -->
-      <!--</div> -->
-    <p>
-      Op zoek naar een unieke locatie voor één of ander evenement of activiteit?
-      <br>
-      Vele mogelijkheden voor verenigingen, organisaties, particulieren, kleine zelfstandigen en bedrijven.
-    </p>
-    <p>
-      Gelegen in het midden van Vlaanderen, tussen bos & veld,
-      <br>
-      waar verschillende fiets en wandelknooppunten zich kruisen.
-      LippeLof zou wel eens de perfecte locatie kunnen zijn voor jouw evenement.
-    </p>
-  </div> 
-  <div id="body_image">
-    <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
-  </diV>
-  <!-- end of body_text div -->
-<!-- <script type="text/javascript"> -->
-<!--   var _gaq = _gaq || []; -->
-<!--   _gaq.push(['_setAccount', 'UA-12345678-1']); -->
-<!--   _gaq.push(['_trackPageview']); -->
-<!--   (function() { -->
-<!--     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; -->
-<!--     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; -->
-<!--     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); -->
-<!--   })(); -->
-<!-- </script> -->
-<!-- <script type="text/javascript" src="js/jquery-1.5.2.min.js"></script> -->
-<!-- <script type="text/javascript" src="js/common.js"></script> -->
-</body>
+  <head>
+    <title>LippeLof, belevenissen in de kerk zijn tof!</title>
+    <meta charset="utf-8" />
+    <link href="style1.css" rel="stylesheet" type="text/css" />
+    <link href='http://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+    <nav>
+      <ul>
+	<li><a href="index.html">Thuis</a></li>
+	<li><a href="over_ons.html">Wie zijn wij</a></li>
+	<li><a href="evenementen.html">Evenementen</a></li>
+	<li><a href="contacteer_ons.html">Contacteer ons</a></li>
+	<li><a href="fotoboek.html">Fotoboek</a></li>
+      </ul>
+    </nav>
+    <div id="body_image">
+      <img src="backgrounds/LippeLof_POS_Q.jpg" width="600" height="200" alt="Logo LippeLof." id="logoImage" />
+    </diV>
+    <div id="body_text">
+      <h2>Een stukje erfgoed met een nieuwe bestemming</h2>
+      <p>
+	Na een zorgvuldige restauratie heefd de oude kerk haar glans teruggevonden - en meer dan dat...
+	<br>
+	Dit prachtige monument vormt nu het ideale decor voor allerlei evenementen en activiteiten.
+      </p>
+      <p>
+	Met respect voor het verleden en oog voor hedendaags comfort biedt de kerk een unieke sfeer waar geschiedenis en beleving samenkomen.
+	<br>
+	De ideale uitvalsbasis voor de Lippelose gemeenschap en ver daarbuiten.
+      </p>
+    </div> 
+    <div id="body_image">
+      <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
+    </diV>
+  </body>
 </html>
