--- a/faciliteiten.html
+++ b/faciliteiten.html
@@ -21,16 +21,30 @@
       <img src="backgrounds/LippeLof_POS_Q.jpg" width="600" height="200" alt="Logo LippeLof." id="logoImage" />
     </diV>
     <div id="body_text">
-      <h2>Een stukje erfgoed met een nieuwe bestemming</h2>
+      <h2>Onze faciliteiten</h2>
       <p>
-	Na een zorgvuldige restauratie heefd de oude kerk haar glans teruggevonden - en meer dan dat...
-	<br>
-	Dit prachtige monument vormt nu het ideale decor voor allerlei evenementen en activiteiten.
+	<ul>
+	  <li>Polivalente ruimte met 180 stoelen en multifunctionele tafels</li>
+	  <li>Keukentje, met barmeubel, frigo's aanrecht met dubbele spoeltafel en vaatwasser</li>
+	  <li>Toiletten</li>
+	  <li>Vergaderruimte voor ongeveer 10 personen</li>
+	  <li>Artiestenruimte</li>
+	  <li>Toeristisch infopunt</li>
+	  </ul>
       </p>
+      <h2>Enkele voorbeeldactiviteiten</h2>
       <p>
-	Met respect voor het verleden en oog voor hedendaags comfort biedt de kerk een unieke sfeer waar geschiedenis en beleving samenkomen.
-	<br>
-	De ideale uitvalsbasis voor de Lippelose gemeenschap en ver daarbuiten.
+	<ul>
+	  <li>Concerten</li>
+	  <li>Theater</li>
+	  <li>Workshops</li>
+	  <li>Voordrachten</li>
+	  <li>Vergaderingen</li>
+	  <li>Tentoonstellingen</li>
+	  <li>Feesten</li>
+	  <li>Allerlei ontmoetingsmomenten</li>
+	  </ul>
+      <h2>Vele mogelijkheden voor verenigingen, organisaties, particulieren, kleine zelfstandigen en bedrijven</h2>
       </p>
     </div> 
     <div id="body_image">
