--- a/fotoboek.html
+++ b/fotoboek.html
@@ -34,11 +34,12 @@
     <ul>
       <li><a href="index.html">Thuis</a></li>
       <li><a href="over_ons.html">Wie zijn wij</a></li>
+      <li><a href="faciliteiten.html">Faciliteiten</a></li>
       <li><a href="evenementen.html">Evenementen</a></li>
       <li><a href="contacteer_ons.html">Contacteer ons</a></li>
       <li><a href="fotoboek.html">Fotoboek</a></li>
     </ul>
-</nav>
+  </nav>
   <div id="body_text">
     <h2>Fotoboek</h2>
     <p>Below are some of the great views that club members have
