--- a/contacteer_ons.html
+++ b/contacteer_ons.html
@@ -34,6 +34,7 @@
     <ul>
       <li><a href="index.html">Thuis</a></li>
       <li><a href="over_ons.html">Wie zijn wij</a></li>
+      <li><a href="faciliteiten.html">Faciliteiten</a></li>
       <li><a href="evenementen.html">Evenementen</a></li>
       <li><a href="contacteer_ons.html">Contacteer ons</a></li>
       <li><a href="fotoboek.html">Fotoboek</a></li>
