--- a/evenementen.html
+++ b/evenementen.html
@@ -3,94 +3,67 @@
 <head>
   <title>LippeLof, belevenissen in de kerk zijn tof!</title>
   <meta charset="utf-8" />
-  <!--[if lt IE 9]>
-   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
   <link href="style1.css" rel="stylesheet" type="text/css" />
   <link href='http://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <!-- <header> -->
-  <!--   <div id="sitebranding"> -->
-  <!--     <h1>LippeLof.be</h1> -->
-  <!--   </div> -->
-  <!--   <div id="tagline"> -->
-  <!--     <p>LippeLof is eens iets anders dan spelen in den hof!</p> -->
-  <!--   </div> -->
-  <!--   <\!-- SiteSearch Rollyo -\-> -->
-  <!--   <form id="searchform" name="searchform" action="http://www.rollyo.com/search.html" method="get"> -->
-  <!--     <div id="search"> -->
-  <!--       <input type="text" name="q" value="" id="search-box" /> in -->
-  <!--       <select id="searchmenu" name="sid"> -->
-  <!--         <option value="6170">Bubble Under</option> -->
-  <!--         <option value="web">The web</option> -->
-  <!--       </select> -->
-  <!--       <input type="submit" value="Search" /> -->
-  <!--     </div> -->
-  <!--   </form> -->
-  <!--   <\!-- SiteSearch Rollyo -\-> -->
-  <!-- </header> -->
   <nav>
     <ul>
       <li><a href="index.html">Thuis</a></li>
       <li><a href="over_ons.html">Wie zijn wij</a></li>
+      <li><a href="faciliteiten.html">Faciliteiten</a></li>
       <li><a href="evenementen.html">Evenementen</a></li>
       <li><a href="contacteer_ons.html">Contacteer ons</a></li>
       <li><a href="fotoboek.html">Fotoboek</a></li>
     </ul>
   </nav>
+    <div id="body_image">
+      <img src="backgrounds/LippeLof_POS_Q.jpg" width="600" height="200" alt="Logo LippeLof." id="logoImage" />
+    </diV>
   <div id="body_text">
-    <h2>Evenementen</h2>
-      <p>Bubble Under members love meeting up for dive trips around the country.
-          Below are all the dabouive trips that we currently have planned. For more
-          information about any of them, please get in contact with that event's
-          organizer.</p>
+    <h2>Save the dates</h2>
+      <p>Tal van openingsactiviteiten in december!</p>
       <table class="events" summary="Details of upcoming club events and dive trips">
         <caption>Club events/dive trips for the next six months</caption>   
         <tr>
-          <th>Date</th>     
-          <th>Event Description</th>     
-          <th>Approximate Cost</th>
-          <th>Contact</th>   
+          <th>Datum</th>     
+          <th>Evenement</th>
+	  <th>Uren</th>
+	  <th>Prijs</th>
+          <th>Organisatie</th>   
         </tr>   
         <tr>     
-          <td>12 July</td>     
-          <td>Committee meeting, deciding on next year's trips</td>     
-          <td>N/A</td>     
-          <td>Bob Dobalina</td>
+          <td>Zaterdag 13 december</td>     
+          <td>Concert met Paul Michiels</td>     
+          <td>Deuren 19u15 | Concert 20u</td>
+	  <td>20€</td>
+          <td>Gemeente Puurs-Sint-Amands en Cultuurkerk Lippelo</td>
         </tr>   
         <tr>     
-          <td>19 July</td>     
-          <td>7-day trip to Hurghada (package deal) - limited spaces</td>     
-          <td>&pound;260 pp (all inclusive), departing Luton</td>     
-          <td>Bob Dobalina</td>   
+          <td>Zondag 14 december</td>     
+          <td>Opendeur LippeLof van 14u tot 18u</td>
+	  <td>Van 14u tot 18u</td>
+	  <td>Gratis</td>
+          <td>LippeLof by Kristien & Bart</td>   
         </tr>   
         <tr>     
-          <td>5 August</td>
-          <td>Ocean &amp; Sports Diver Theory Course</td>     
-          <td>Call for details</td>
-          <td>Jeff Edgely</td>   
+          <td>Zaterdag 20 december</td>
+          <td>Kerstmarkt</td>     
+          <td>vanaf 17u</td>
+          <td>Gratis</td>     
+          <td>Kerstcomité Lippelo</td>   
         </tr>   
         <tr>     
-          <td>12 August</td>     
-          <td>Murder Mystery Weekend, Cotswolds (no diving!)</td>     
-          <td>&pound;65 pp (accommodation included)</td>     
-          <td>Jill Smith</td>   
+          <td>Zondag 28 december</td>     
+          <td>Kersthappening</td>     
+          <td>Van 14u tot 18u</td>     
+          <td>Gratis</td>     
+          <td>LippeLof by Kristien & Bart</td>   
         </tr> 
       </table>
     </div> 
-<!-- end of body_text div -->
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-12345678-1']);
-  _gaq.push(['_trackPageview']);
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
-<script type="text/javascript" src="js/jquery-1.5.2.min.js"></script>
-<script type="text/javascript" src="js/common.js"></script>
+    <div id="body_image">
+      <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
+    </diV>
 </body>
 </html>
