--- a/evenementen.html
+++ b/evenementen.html
@@ -23,7 +23,7 @@
   <div id="body_text">
     <h2>Save the dates</h2>
       <p>Tal van openingsactiviteiten in december!</p>
-      <table class="events" summary="Details of upcoming club events and dive trips">
+      <table class="events" summary="Tal van openingsactiviteiten in december!">
         <caption>Club events/dive trips for the next six months</caption>   
         <tr>
           <th>Datum</th>     
