--- a/evenementen.html
+++ b/evenementen.html
@@ -24,7 +24,7 @@
     <h2>Save the dates</h2>
       <p>Tal van openingsactiviteiten in december!</p>
       <table class="events" summary="Tal van openingsactiviteiten in december!">
-        <caption>Club events/dive trips for the next six months</caption>   
+        <caption>Tal van openingsactiviteiten in december!</caption>   
         <tr>
           <th>Datum</th>     
           <th>Evenement</th>
