--- a/over_ons.html
+++ b/over_ons.html
@@ -1,80 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>LippeLof, belevenissen in de kerk zijn tof!</title>
-  <meta charset="utf-8" />
-  <!--[if lt IE 9]>
-   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-  <link href="style1.css" rel="stylesheet" type="text/css" />
-  <link href='http://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
-</head>
-<body>
-  <header>
-    <div id="sitebranding">
-      <h1>lippelof.be</h1>
-    </div>
-    <div id="tagline">
-      <p>LippeLof is super tof!</p>
-    </div>
-    <!-- SiteSearch Rollyo -->
-    <form id="searchform" name="searchform" action="http://www.rollyo.com/search.html" method="get">
-      <div id="search">
-        <input type="text" name="q" value="" id="search-box" /> in
-        <select id="searchmenu" name="sid">
-          <option value="6170">Bubble Under</option>
-          <option value="web">The web</option>
-        </select>
-        <input type="submit" value="Search"/>
+  <head>
+    <title>LippeLof, belevenissen in de kerk zijn tof!</title>
+    <meta charset="utf-8" />
+    <!--[if lt IE 9]>
+	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+	 <link href="style1.css" rel="stylesheet" type="text/css" />
+	 <link href='http://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+    <header>
+      <div id="sitebranding">
+	<h1>lippelof.be</h1>
       </div>
-    </form>
-    <!-- SiteSearch Rollyo -->
-  </header>
-  <nav>
-    <ul>
-      <li><a href="index.html">Thuis</a></li>
-      <li><a href="over_ons.html">Wie zijn wij</a></li>
-      <li><a href="faciliteiten.html">Faciliteiten</a></li>
-      <li><a href="evenementen.html">Evenementen</a></li>
-      <li><a href="contacteer_ons.html">Contacteer ons</a></li>
-      <li><a href="fotoboek.html">Fotoboek</a></li>
-    </ul>
-</nav>
-  <div id="body_text">
-    <h2>Wie zijn wij?</h2>
-	<aside>
-		<blockquote>
-		Happiness is a dip in the ocean followed by a pint
-		or two of Old Speckled Hen. You can quote me on that!		</blockquote>
-		Bob Dobalina, March 2011	</aside>
-    <p><span class="fun">LippeLof</span> is gehuisvest in de kerk van Lippelo.</p>
-    <p>LippeLof CommV
-Lippelodorp 21
-2890 Puurs – Sint-Amands
-info@lippelof.be
-Bart: 0496/02 42 98
-Kristien: 0473/69 11 35
- 
-Adres kerk: Lippelodorp 36
-</p>
-    <p>Op zoek naar een unieke locatie voor één of ander activiteit of evenement?
-Zowel particulieren, verenigingen als bedrijven zijn welkom.
-Gelegen in het midden van Vlaanderen, tussen bos & veld, en verschillende fiets en wandelknooppunten.
-      LippeLof zou wel eens de perfecte locatie kunnen zijn voor <em>jouw evenement</em>.
-    </p>
-  </div> 
-<!-- end of body_text div -->
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-12345678-1']);
-  _gaq.push(['_trackPageview']);
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
-<script type="text/javascript" src="js/jquery-1.5.2.min.js"></script>
-<script type="text/javascript" src="js/common.js"></script>
-</body>
+      <div id="tagline">
+	<p>LippeLof is super tof!</p>
+      </div>
+      <!-- SiteSearch Rollyo -->
+      <form id="searchform" name="searchform" action="http://www.rollyo.com/search.html" method="get">
+	<div id="search">
+          <input type="text" name="q" value="" id="search-box" /> in
+          <select id="searchmenu" name="sid">
+            <option value="6170">Bubble Under</option>
+            <option value="web">The web</option>
+          </select>
+          <input type="submit" value="Search"/>
+	</div>
+      </form>
+      <!-- SiteSearch Rollyo -->
+    </header>
+    <nav>
+      <ul>
+	<li><a href="index.html">Thuis</a></li>
+	<li><a href="over_ons.html">Wie zijn wij</a></li>
+	<li><a href="faciliteiten.html">Faciliteiten</a></li>
+	<li><a href="evenementen.html">Evenementen</a></li>
+	<li><a href="contacteer_ons.html">Contacteer ons</a></li>
+	<li><a href="fotoboek.html">Fotoboek</a></li>
+      </ul>
+    </nav>
+    <div id="body_text">
+      <h2>Wie zijn wij?</h2>
+      <aside>
+	<blockquote>
+	  een stukje erfgoed met een nieuwe bestemming
+	</blockquote>
+	Kristien Van Riet & Bart Borghmans, December 2025
+      </aside>
+      <p><span class="fun">LippeLof</span> is gehuisvest in de kerk van Lippelo.</p>
+      <p>LippeLof CommV
+	Lippelodorp 21
+	2890 Puurs – Sint-Amands
+	info@lippelof.be
+	Bart: 0496/02 42 98
+	Kristien: 0473/69 11 35
+	
+	Adres kerk: Lippelodorp 36
+      </p>
+      <p>Op zoek naar een unieke locatie voor één of ander activiteit of evenement?
+	Zowel particulieren, verenigingen als bedrijven zijn welkom.
+	Gelegen in het midden van Vlaanderen, tussen bos & veld, en verschillende fiets en wandelknooppunten.
+	LippeLof zou wel eens de perfecte locatie kunnen zijn voor <em>jouw evenement</em>.
+      </p>
+    </div> 
+  </body>
 </html>
