--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
     </diV>
     <div id="body_text">
       <h2>Een stukje erfgoed met een nieuwe bestemming</h2>
+      <aside>
+	<blockquote>
+	  Na een zorgvuldige restauratie heefd de oude kerk haar glans teruggevonden - en meer dan dat...
+	</blockquote>
+	Kristien Van Riet & Bart Borghmans, December 2025
+      </aside>
       <p>
-	Na een zorgvuldige restauratie heefd de oude kerk haar glans teruggevonden - en meer dan dat...
-	<br>
 	Dit prachtige monument vormt nu het ideale decor voor allerlei evenementen en activiteiten.
       </p>
       <p>
@@ -32,7 +36,14 @@
 	<br>
 	De ideale uitvalsbasis voor de Lippelose gemeenschap en ver daarbuiten.
       </p>
-    </div> 
+    </div>
+    <div>
+      <aside>
+	<blockquote>
+	  Tal van openingsactiviteiten in december!
+	</blockquote>
+      </aside>
+    </div>
     <div id="body_image">
       <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
     </diV>
