--- a/faciliteiten.html
+++ b/faciliteiten.html
@@ -44,9 +44,15 @@
 	  <li>Feesten</li>
 	  <li>Allerlei ontmoetingsmomenten</li>
 	  </ul>
-      <h2>Vele mogelijkheden voor verenigingen, organisaties, particulieren, kleine zelfstandigen en bedrijven</h2>
       </p>
     </div> 
+    <div>
+      <aside>
+	<blockquote>
+	  Vele mogelijkheden voor verenigingen, organisaties, particulieren, kleine zelfstandigen en bedrijven.
+	</blockquote>
+      </aside>
+    </div>
     <div id="body_image">
       <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
     </diV>
