uniformisatie inhoud & quotes

--- a/over_ons.html
+++ b/over_ons.html
@@ -17,18 +17,6 @@
       <div id="tagline">
 	<p>LippeLof is super tof!</p>
       </div>
-      <!-- SiteSearch Rollyo -->
-      <form id="searchform" name="searchform" action="http://www.rollyo.com/search.html" method="get">
-	<div id="search">
-          <input type="text" name="q" value="" id="search-box" /> in
-          <select id="searchmenu" name="sid">
-            <option value="6170">Bubble Under</option>
-            <option value="web">The web</option>
-          </select>
-          <input type="submit" value="Search"/>
-	</div>
-      </form>
-      <!-- SiteSearch Rollyo -->
     </header>
     <nav>
       <ul>
@@ -46,16 +34,22 @@
 	<blockquote>
 	  een stukje erfgoed met een nieuwe bestemming
 	</blockquote>
+	Tot binnenkort!
+	<br>
 	Kristien Van Riet & Bart Borghmans, December 2025
       </aside>
       <p><span class="fun">LippeLof</span> is gehuisvest in de kerk van Lippelo.</p>
       <p>LippeLof CommV
 	Lippelodorp 21
+	<br>
 	2890 Puurs – Sint-Amands
+	<br>
 	info@lippelof.be
+	<br>
 	Bart: 0496/02 42 98
+	<br>
 	Kristien: 0473/69 11 35
-	
+	<br>
 	Adres kerk: Lippelodorp 36
       </p>
       <p>Op zoek naar een unieke locatie voor één of ander activiteit of evenement?
