enkel inhoudelijk afgewerkte menu items & pagina's

--- a/evenementen.html
+++ b/evenementen.html
@@ -1,28 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>LippeLof, belevenissen in de kerk zijn tof!</title>
-  <meta charset="utf-8" />
-  <link href="style1.css" rel="stylesheet" type="text/css" />
-  <link href='http://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
-</head>
-<body>
-  <nav>
-    <ul>
-      <li><a href="index.html">Thuis</a></li>
-      <li><a href="over_ons.html">Wie zijn wij</a></li>
-      <li><a href="faciliteiten.html">Faciliteiten</a></li>
-      <li><a href="evenementen.html">Evenementen</a></li>
-      <li><a href="contacteer_ons.html">Contacteer ons</a></li>
-      <li><a href="fotoboek.html">Fotoboek</a></li>
-    </ul>
-  </nav>
+  <head>
+    <title>LippeLof, belevenissen in de kerk zijn tof!</title>
+    <meta charset="utf-8" />
+    <link href="style1.css" rel="stylesheet" type="text/css" />
+    <link href='http://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+    <header>
+      <div id="sitebranding">
+	<h1>lippelof.be</h1>
+      </div>
+      <div id="tagline">
+	<p>LippeLof is super tof!</p>
+      </div>
+    </header>
+    <nav>
+      <ul>
+	<li><a href="index.html">Thuis</a></li>
+	<li><a href="over_ons.html">Wie zijn wij</a></li>
+	<li><a href="faciliteiten.html">Faciliteiten</a></li>
+	<li><a href="evenementen.html">Evenementen</a></li>
+	<!-- <li><a href="contacteer_ons.html">Contacteer ons</a></li> -->
+	<!-- <li><a href="fotoboek.html">Fotoboek</a></li> -->
+      </ul>
+    </nav>
     <div id="body_image">
       <img src="backgrounds/LippeLof_POS_Q.jpg" width="600" height="200" alt="Logo LippeLof." id="logoImage" />
     </diV>
-  <div id="body_text">
-    <h2>Save the dates</h2>
-      <p>Tal van openingsactiviteiten in december!</p>
+    <div id="body_text">
+      <h2>Save the dates</h2>
+      <aside>
+	<blockquote>
+	  Tal van openingsactiviteiten in december!
+	</blockquote>
+      </aside>
       <table class="events" summary="Tal van openingsactiviteiten in december!">
         <caption>Tal van openingsactiviteiten in december!</caption>   
         <tr>
@@ -65,5 +77,5 @@
     <div id="body_image">
       <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
     </diV>
-</body>
+  </body>
 </html>
