--- a/faciliteiten.html
+++ b/faciliteiten.html
@@ -7,14 +7,22 @@
     <link href='http://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
   </head>
   <body>
+    <header>
+      <div id="sitebranding">
+	<h1>lippelof.be</h1>
+      </div>
+      <div id="tagline">
+	<p>LippeLof is super tof!</p>
+      </div>
+    </header>
     <nav>
       <ul>
 	<li><a href="index.html">Thuis</a></li>
 	<li><a href="over_ons.html">Wie zijn wij</a></li>
 	<li><a href="faciliteiten.html">Faciliteiten</a></li>
 	<li><a href="evenementen.html">Evenementen</a></li>
-	<li><a href="contacteer_ons.html">Contacteer ons</a></li>
-	<li><a href="fotoboek.html">Fotoboek</a></li>
+	<!-- <li><a href="contacteer_ons.html">Contacteer ons</a></li> -->
+	<!-- <li><a href="fotoboek.html">Fotoboek</a></li> -->
       </ul>
     </nav>
     <div id="body_image">
@@ -22,6 +30,12 @@
     </diV>
     <div id="body_text">
       <h2>Onze faciliteiten</h2>
+      <aside>
+	<blockquote>
+	  Na een zorgvuldige restauratie heefd de oude kerk haar glans teruggevonden - en meer dan dat...
+	</blockquote>
+	Kristien Van Riet & Bart Borghmans, December 2025
+      </aside>
       <p>
 	<ul>
 	  <li>Polivalente ruimte met 180 stoelen en multifunctionele tafels</li>
