--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
     <link href='http://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
   </head>
   <body>
+    <header>
+      <div id="sitebranding">
+	<h1>lippelof.be</h1>
+      </div>
+      <div id="tagline">
+	<p>LippeLof is super tof!</p>
+      </div>
+    </header>
     <nav>
       <ul>
 	<li><a href="index.html">Thuis</a></li>
 	<li><a href="over_ons.html">Wie zijn wij</a></li>
 	<li><a href="faciliteiten.html">Faciliteiten</a></li>
 	<li><a href="evenementen.html">Evenementen</a></li>
-	<!--
-	<li><a href="contacteer_ons.html">Contacteer ons</a></li>
-	<li><a href="fotoboek.html">Fotoboek</a></li>
-	-->
+	<!-- <li><a href="contacteer_ons.html">Contacteer ons</a></li> -->
+	<!-- <li><a href="fotoboek.html">Fotoboek</a></li> -->
       </ul>
     </nav>
     <div id="body_image">
