--- a/over_ons.html
+++ b/over_ons.html
@@ -3,11 +3,8 @@
   <head>
     <title>LippeLof, belevenissen in de kerk zijn tof!</title>
     <meta charset="utf-8" />
-    <!--[if lt IE 9]>
-	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
-	 <link href="style1.css" rel="stylesheet" type="text/css" />
-	 <link href='http://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
+    <link href="style1.css" rel="stylesheet" type="text/css" />
+    <link href='http://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <header>
@@ -24,15 +21,20 @@
 	<li><a href="over_ons.html">Wie zijn wij</a></li>
 	<li><a href="faciliteiten.html">Faciliteiten</a></li>
 	<li><a href="evenementen.html">Evenementen</a></li>
-	<li><a href="contacteer_ons.html">Contacteer ons</a></li>
-	<li><a href="fotoboek.html">Fotoboek</a></li>
+	<!-- <li><a href="contacteer_ons.html">Contacteer ons</a></li> -->
+	<!-- <li><a href="fotoboek.html">Fotoboek</a></li> -->
       </ul>
     </nav>
+    <div id="body_image">
+      <img src="backgrounds/LippeLof_POS_Q.jpg" width="600" height="200" alt="Logo LippeLof." id="logoImage" />
+    </diV>
     <div id="body_text">
       <h2>Wie zijn wij?</h2>
       <aside>
 	<blockquote>
-	  een stukje erfgoed met een nieuwe bestemming
+	  Na een zorgvuldige restauratie heefd de oude kerk haar glans
+	  teruggevonden  als   een  stukje  erfgoed  met   een  nieuwe
+	  bestemming.
 	</blockquote>
 	Tot binnenkort!
 	<br>
@@ -52,10 +54,13 @@
 	<br>
 	Adres kerk: Lippelodorp 36
       </p>
-      <p>Op zoek naar een unieke locatie voor één of ander activiteit of evenement?
-	Zowel particulieren, verenigingen als bedrijven zijn welkom.
-	Gelegen in het midden van Vlaanderen, tussen bos & veld, en verschillende fiets en wandelknooppunten.
-	LippeLof zou wel eens de perfecte locatie kunnen zijn voor <em>jouw evenement</em>.
+      <p>
+	Op zoek naar  een unieke locatie voor één  of ander activiteit
+	of evenement?  Zowel particulieren, verenigingen als bedrijven
+	zijn welkom.  Gelegen in het midden van Vlaanderen, tussen bos
+	& veld, en verschillende fiets en wandelknooppunten.  LippeLof
+	zou wel  eens de  perfecte locatie  kunnen zijn  voor <em>jouw
+	evenement</em>.
       </p>
     </div> 
   </body>
