--- a/evenementen.html
+++ b/evenementen.html
@@ -32,8 +32,9 @@
       <h2>Save the dates</h2>
       <aside>
 	<blockquote>
-	  Tal van openingsactiviteiten in december!
+	  Na een zorgvuldige restauratie heefd de oude kerk haar glans teruggevonden - en meer dan dat...
 	</blockquote>
+	Kristien Van Riet & Bart Borghmans, December 2025
       </aside>
       <table class="events" summary="Tal van openingsactiviteiten in december!">
         <caption>Tal van openingsactiviteiten in december!</caption>   
@@ -73,7 +74,14 @@
           <td>LippeLof by Kristien & Bart</td>   
         </tr> 
       </table>
-    </div> 
+    </div>
+    <div>
+      <aside>
+	<blockquote>
+	  Tal van openingsactiviteiten in december!
+	</blockquote>
+      </aside>
+    </div>
     <div id="body_image">
       <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
     </diV>
