enkel inhoudelijk afgewerkte menu items & pagina's

--- a/over_ons.html
+++ b/over_ons.html
@@ -54,14 +54,21 @@
 	<br>
 	Adres kerk: Lippelodorp 36
       </p>
-      <p>
+    </div>
+    <div>
+      <aside>
+	<blockquote>
 	Op zoek naar  een unieke locatie voor één  of ander activiteit
 	of evenement?  Zowel particulieren, verenigingen als bedrijven
 	zijn welkom.  Gelegen in het midden van Vlaanderen, tussen bos
 	& veld, en verschillende fiets en wandelknooppunten.  LippeLof
 	zou wel  eens de  perfecte locatie  kunnen zijn  voor <em>jouw
 	evenement</em>.
-      </p>
-    </div> 
+	</blockquote>
+      </aside>
+    </div>
+    <div id="body_image">
+      <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
+    </div>
   </body>
 </html>
