verbind evenement met detail

--- a/evenementen.html
+++ b/evenementen.html
@@ -54,7 +54,7 @@
         </tr>   
         <tr>     
           <td>Zondag 14 december</td>     
-          <td>Opendeur LippeLof van 14u tot 18u</td>
+          <td><a href="ontdek_de_kerk.html">Opendeur LippeLof</a></td>
 	  <td>Van 14u tot 18u</td>
 	  <td>Gratis</td>
           <td>LippeLof by Kristien & Bart</td>   
