verbind evenement met detail

--- a/evenementen.html
+++ b/evenementen.html
@@ -47,7 +47,7 @@
         </tr>   
         <tr>     
           <td>Zaterdag 13 december</td>     
-          <td>Concert met Paul Michiels</td>     
+          <td><a href="openingsconcert.html">Concert met Paul Michiels</a></td>     
           <td>Deuren 19u15 | Concert 20u</td>
 	  <td>20€</td>
           <td>Gemeente Puurs-Sint-Amands en Cultuurkerk Lippelo</td>
