--- a/faciliteiten.html
+++ b/faciliteiten.html
@@ -38,11 +38,11 @@
       </aside>
       <p>
 	<ul>
-	  <li>Polivalente ruimte met 180 stoelen en multifunctionele tafels</li>
-	  <li>Keukentje, met barmeubel, frigo's aanrecht met dubbele spoeltafel en vaatwasser</li>
+	  <li>Polivalente ruimte (excl. hoogkoor) met 180 stoelen en multifunctionele tafels: 290 m²</li>
+	  <li>Keukentje, met barmeubel, frigo's aanrecht met dubbele spoeltafel en vaatwasser: 13,6 m²</li>
 	  <li>Toiletten</li>
-	  <li>Vergaderruimte voor ongeveer 10 personen</li>
-	  <li>Artiestenruimte</li>
+	  <li>Vergaderruimte voor ongeveer 10 personen: 17,75 m²</li>
+	  <li>Artiestenruimte (backstage): 17,74 m²</li>
 	  <li>Toeristisch infopunt</li>
 	  </ul>
       </p>
