--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
     </div>
     <div id="body_image">
       <img src="backgrounds/IMG_3031.jpg" width="200" height="300" alt="De kerk van Lippelo;" id="kerkImage" />
-    </diV>
+    </div>
   </body>
 </html>
