--- a/over_ons.html
+++ b/over_ons.html
@@ -30,16 +30,37 @@
     </diV>
     <div id="body_text">
       <h2>Wie zijn wij?</h2>
-      <aside>
-	<blockquote>
-	  Na een zorgvuldige restauratie heefd de oude kerk haar glans
-	  teruggevonden  als   een  stukje  erfgoed  met   een  nieuwe
-	  bestemming.
-	</blockquote>
-	Tot binnenkort!
-	<br>
-	Kristien Van Riet & Bart Borghmans, December 2025
-      </aside>
+      <p>
+	Wij zijn Bart Borghmans & Kristien  Van Riet, 2 mensen met een
+	hart voor Lippelo en een  gezamenlijke passie voor muziek.  Na
+	jarenlange carrières  in totaal verschillende werelden  - Bart
+	als  verzekeringsmakelaar  en  Kristien  als  lerares  in  het
+	deeltijds kunstonderwijs  – voelden we  dat het tijd  was voor
+	een  nieuwe  uitdaging.   Iets   totaal  anders,  vooral  iets
+	plezant, bovenop onze huidige job.
+      </p>
+      <p>
+We wonen letterlijk onder de kerktoren, in het hart van het dorp.
+      </p>
+      <p>
+	Voor Bart, geboren en getogen  in Lippelo en zoon van Norbert,
+	die hier 60 jaar koster-organist is geweest, is de kerk altijd een 2de
+	thuis geweest.   Tot op heden  bleef hij betrokken bij  het dagelijkse
+	reilen en zeilen  van de kerk.  Hij kent elk  hoekje, elk geluid, elke
+	toon die weerklinkt onder het gewelf.
+      </p>
+      <p>
+	Kristien, afkomstig uit Buggenhout,  voelde zich al snel thuis
+	in   het   gezellige   Lippelo.   Haar   opleiding   aan   het
+	Lemmensinstituut legde  de basis voor haar  muzikale loopbaan,
+	maar  ook voor  haar overtuiging  dat muziek  mensen verbindt.
+	Via haar job als lerares gitaar en groepsmusiceren, stimuleert
+	ze  jong en  oud  om  samen te  creëren,  te  luisteren en  te
+	groeien.
+      </p>
+      <p>
+	Kristien haar sociaal-cultureel engagement en de sterke verbondenheid van Bart met de kerk, liggen aan de basis van LippeLof.
+      </p>
       <p><span class="fun">LippeLof</span> is gehuisvest in de kerk van Lippelo.</p>
       <p>LippeLof CommV
 	Lippelodorp 21
