mail zondag 26 oktober 2025

--- a/index.html
+++ b/index.html
@@ -30,19 +30,21 @@
     </diV>
     <div id="body_text">
       <h2>Een stukje erfgoed met een nieuwe bestemming</h2>
-      <aside>
-	<blockquote>
-	  Na een zorgvuldige restauratie heefd de oude kerk haar glans teruggevonden - en meer dan dat...
-	</blockquote>
-	Kristien Van Riet & Bart Borghmans, December 2025
-      </aside>
       <p>
-	Dit prachtige monument vormt nu het ideale decor voor allerlei evenementen en activiteiten.
+	Na een zorgvuldige  restauratie heeft de oude  kerk haar glans
+	teruggevonden – en  meer dan dat… Dit prachtige monument  vormt nu het
+	ideale decor  voor allerlei evenementen en  activiteiten.  Met respect
+	voor het  verleden en oog  voor hedendaags  comfort biedt de  kerk een
+	unieke sfeer waar geschiedenis en beleving samenkomen.  Gelegen in het
+	midden  van  Vlaanderen,   tussen  bos  en  veld  is   het  de  ideale
+	uitvalsbasis voor de Lippelose gemeenschap en ver daarbuiten.
+      <p>
+	</p>
+      LippeLof is meer dan een locatie.
+      Het is een lofzang op het leven, op de gemeenschap, op Lippelo.
       </p>
       <p>
-	Met respect voor het verleden en oog voor hedendaags comfort biedt de kerk een unieke sfeer waar geschiedenis en beleving samenkomen.
-	<br>
-	De ideale uitvalsbasis voor de Lippelose gemeenschap en ver daarbuiten.
+	Welkom – voel je thuis in LippeLof.
       </p>
     </div>
     <div>
