--- a/over_ons.html
+++ b/over_ons.html
@@ -40,14 +40,15 @@
 	plezant, bovenop onze huidige job.
       </p>
       <p>
-We wonen letterlijk onder de kerktoren, in het hart van het dorp.
+	We wonen  letterlijk onder de  kerktoren, in het hart  van het
+	dorp.
       </p>
       <p>
 	Voor Bart, geboren en getogen  in Lippelo en zoon van Norbert,
-	die hier 60 jaar koster-organist is geweest, is de kerk altijd een 2de
-	thuis geweest.   Tot op heden  bleef hij betrokken bij  het dagelijkse
-	reilen en zeilen  van de kerk.  Hij kent elk  hoekje, elk geluid, elke
-	toon die weerklinkt onder het gewelf.
+	die hier 60 jaar koster-organist is geweest, is de kerk altijd
+	een 2de thuis  geweest.  Tot op heden bleef  hij betrokken bij
+	het dagelijkse  reilen en  zeilen van de  kerk.  Hij  kent elk
+	hoekje, elk geluid, elke toon die weerklinkt onder het gewelf.
       </p>
       <p>
 	Kristien, afkomstig uit Buggenhout,  voelde zich al snel thuis
@@ -59,7 +60,9 @@ We wonen letterlijk onder de kerktoren, in het hart van het dorp.
 	groeien.
       </p>
       <p>
-	Kristien haar sociaal-cultureel engagement en de sterke verbondenheid van Bart met de kerk, liggen aan de basis van LippeLof.
+	Kristien  haar  sociaal-cultureel   engagement  en  de  sterke
+	verbondenheid van  Bart met de  kerk, liggen aan de  basis van
+	LippeLof.
       </p>
       <p><span class="fun">LippeLof</span> is gehuisvest in de kerk van Lippelo.</p>
       <p>LippeLof CommV
